# driftwatch

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: progressive_arc.py
src/driftwatch/: __init__.py  cli.py  data.py  evaluator.py  llm.py
src/driftwatch/datasets/: __init__.py  arc_challenge.py  gsm8k.py
tests/: test_arc_eval.py  test_arc_eval_integration.py  test_cli.py  test_gsm8k_eval.py  test_gsm8k_eval_integration.py  test_llm.py  test_llm_integration.py  test_llm_unit.py  test_progressive_arc.py
